# Helpdesk2

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  ticketdialog.cpp  ticketdialog.h  ticketdialog.ui  ticketmodel.cpp  ticketmodel.h
